; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_sync.c_master_wakeup_work_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/netfilter/ipvs/extr_ip_vs_sync.c_master_wakeup_work_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.work_struct = type { i32 }

@ip_vs_sync_lock = common dso_local global i32 0, align 4
@ip_vs_sync_queue_len = common dso_local global i64 0, align 8
@ip_vs_sync_queue_delay = common dso_local global i64 0, align 8
@IPVS_SYNC_WAKEUP_RATE = common dso_local global i64 0, align 8
@sync_master_thread = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.work_struct*)* @master_wakeup_work_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @master_wakeup_work_handler(%struct.work_struct* %0) #0 {
  %2 = alloca %struct.work_struct*, align 8
  store %struct.work_struct* %0, %struct.work_struct** %2, align 8
  %3 = call i32 @spin_lock_bh(i32* @ip_vs_sync_lock)
  %4 = load i64, i64* @ip_vs_sync_queue_len, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %14

6:                                                ; preds = %1
  %7 = load i64, i64* @ip_vs_sync_queue_delay, align 8
  %8 = load i64, i64* @IPVS_SYNC_WAKEUP_RATE, align 8
  %9 = icmp slt i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %6
  %11 = load i64, i64* @IPVS_SYNC_WAKEUP_RATE, align 8
  store i64 %11, i64* @ip_vs_sync_queue_delay, align 8
  %12 = load i32, i32* @sync_master_thread, align 4
  %13 = call i32 @wake_up_process(i32 %12)
  br label %14

14:                                               ; preds = %10, %6, %1
  %15 = call i32 @spin_unlock_bh(i32* @ip_vs_sync_lock)
  ret void
}

declare dso_local i32 @spin_lock_bh(i32*) #1

declare dso_local i32 @wake_up_process(i32) #1

declare dso_local i32 @spin_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
